src/objects/Printer_Command__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Render_As__c</fullName>
        <label>Render As</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Printer Command</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Label__c</columns>
        <columns>Message__c</columns>
        <columns>Render_As__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Printer Command Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Printer Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>